# petsc

./: .gitignore  .project  CMakeLists.txt  FortranStubs.cmake  FortranStubsHelper.cmake  Functions.cmake  OpenCMISSPETScConfig.cmake  PETScConfig.cmake  README.OPENCMISS  testhelper.cmake
cmake/: FortranStubs.cmake  Functions.cmake  IncludeTestFolders.cmake  OpenCMISSPETScConfig.cmake  PETScConfig.cmake  TestRunner.cmake  Testing.cmake  convert_tests.py  petsc_configure_opencmiss.sh
conf/: rules
config/BuildSystem/config/: functions.py
include/: petscblaslapack_caps.h  petscconf.h.in  petscconfiginfo.h.in  petscmachineinfo.h.in  petscversion.h
share/petsc/datafiles/matrices/: arco1  fem1  medium  poisson1  poisson2  tiny
share/petsc/datafiles/matrices/indefinite/: afiro  golan  readme
share/petsc/datafiles/matrices/matmatmult/: A4.BGriffith  P4.BGriffith
share/petsc/datafiles/parmetis-test/: testnp2.0.graph  testnp2.0.graph.xyz  testnp2.1.graph  testnp2.1.graph.xyz  testnp4.0.graph  testnp4.0.graph.xyz  testnp4.1.graph  testnp4.1.graph.xyz  testnp4.2.graph  testnp4.2.graph.xyz  testnp4.3.graph  testnp4.3.graph.xyz
src/dm/dt/examples/tests/: CMakeLists.txt
src/dm/examples/tests/: CMakeLists.txt
src/dm/examples/tutorials/: CMakeLists.txt
src/dm/impls/plex/examples/tests/: CMakeLists.txt
src/ksp/ksp/examples/tests/: CMakeLists.txt  ex25.c
src/ksp/ksp/examples/tutorials/: CMakeLists.txt  makefile
src/ksp/pc/examples/tests/: CMakeLists.txt
src/ksp/pc/examples/tutorials/: CMakeLists.txt
src/ksp/pc/interface/ftn-auto/: preconf.c
src/mat/examples/tests/: CMakeLists.txt
src/mat/examples/tutorials/: CMakeLists.txt
src/mat/impls/nest/ftn-auto/: matnestf.c
src/mat/interface/f90-custom/: zmatrixf90.c
src/mat/order/: wbm.c
src/snes/examples/tests/: CMakeLists.txt  ex15.c  ex16.c  ex8.c
src/snes/examples/tests/output/: ex1_3.out  ex1f_3.out  ex7_1.out
src/snes/examples/tutorials/: CMakeLists.txt
src/sys/classes/viewer/impls/socket/: send.c
src/sys/dll/: dlimpl.c
src/sys/examples/tests/: CMakeLists.txt
src/sys/examples/tutorials/: CMakeLists.txt
src/ts/examples/tests/: CMakeLists.txt
src/ts/examples/tutorials/: CMakeLists.txt
src/vec/is/ao/examples/tests/: CMakeLists.txt
src/vec/is/examples/tests/: CMakeLists.txt
src/vec/is/is/examples/tests/: CMakeLists.txt
src/vec/is/is/examples/tutorials/: CMakeLists.txt
src/vec/is/sf/examples/tutorials/: CMakeLists.txt
src/vec/vec/examples/tests/: CMakeLists.txt
src/vec/vec/examples/tutorials/: CMakeLists.txt
templates/: petscconf.h.in  petscconfiginfo.h.in  petscmachineinfo.h.in
