add_executable(run_dm_tutorials_3 ex3.c)
target_link_libraries(run_dm_tutorials_3 petsc)
ADDTEST(dm_tutorials_3_np3_1 3 run_dm_tutorials_3 output/ex3_1.out "-mat_view  ")
ADDTEST(dm_tutorials_3_np3_2 3 run_dm_tutorials_3 output/ex3_2.out "-mat_view -dim 2 ")
ADDTEST(dm_tutorials_3_np3_3 3 run_dm_tutorials_3 output/ex3_3.out "-mat_view -dim 3 ")
add_executable(run_dm_tutorials_15 ex15.c)
target_link_libraries(run_dm_tutorials_15 petsc)
ADDTEST(dm_tutorials_15_np1 1 run_dm_tutorials_15 output/ex15_1.out "")
ADDTEST(dm_tutorials_15_np12 12 run_dm_tutorials_15 output/ex15_2.out "")
ADDTEST(dm_tutorials_15_np12_v1 12 run_dm_tutorials_15 output/ex15_3.out "-usempiio ")
