add_executable(run_mat_tests_2 ex2.c)
target_link_libraries(run_mat_tests_2 petsc)
ADDTEST(mat_tests_2_np1_1 1 run_mat_tests_2 output/ex2_11_A.out "-mat_type seqaij -rectA ")
ADDTEST(mat_tests_2_np1_1_v1 1 run_mat_tests_2 output/ex2_12_A.out "-mat_type seqdense -rectA ")
ADDTEST(mat_tests_2_np1_1_v2 1 run_mat_tests_2 output/ex2_11_B.out "-mat_type seqaij -rectB ")
ADDTEST(mat_tests_2_np1_1_v3 1 run_mat_tests_2 output/ex2_12_B.out "-mat_type seqdense -rectB ")
add_executable(run_mat_tests_3 ex3.c)
target_link_libraries(run_mat_tests_3 petsc)
ADDTEST(mat_tests_3_np1_1 1 run_mat_tests_3 output/ex3_1.out "")
add_executable(run_mat_tests_5 ex5.c)
target_link_libraries(run_mat_tests_5 petsc)
ADDTEST(mat_tests_5_np1_1 1 run_mat_tests_5 output/ex5_11_A.out "-mat_type seqaij -rectA ")
ADDTEST(mat_tests_5_np1_1_v1 1 run_mat_tests_5 output/ex5_12_A.out "-mat_type seqdense -rectA ")
ADDTEST(mat_tests_5_np1_1_v2 1 run_mat_tests_5 output/ex5_11_B.out "-mat_type seqaij -rectB ")
ADDTEST(mat_tests_5_np1_1_v3 1 run_mat_tests_5 output/ex5_12_B.out "-mat_type seqdense -rectB ")
ADDTEST(mat_tests_5_np1_1_v4 1 run_mat_tests_5 output/ex5_21.out "-mat_type mpiaij ")
ADDTEST(mat_tests_5_np1_1_v5 1 run_mat_tests_5 output/ex5_22.out "-mat_type mpidense ")
ADDTEST(mat_tests_5_np3_1 3 run_mat_tests_5 output/ex5_23.out "-mat_type mpiaij ")
ADDTEST(mat_tests_5_np3_1_v1 3 run_mat_tests_5 output/ex5_24.out "-mat_type mpidense ")
add_executable(run_mat_tests_9 ex9.c)
target_link_libraries(run_mat_tests_9 petsc)
ADDTEST(mat_tests_9_np3 3 run_mat_tests_9 output/ex9_1.out "-view_info ")
ADDTEST(mat_tests_9_np3_v1 3 run_mat_tests_9 output/ex9_2.out "-nsubcomms 2 -view_mat -psubcomm_type interlaced ")
ADDTEST(mat_tests_9_np3_v2 3 run_mat_tests_9 output/ex9_3.out "-nsubcomms 2 -view_mat -psubcomm_type contiguous ")
ADDTEST(mat_tests_9_np3_v3 3 run_mat_tests_9 output/ex9_3_baij.out "-mat_type baij -nsubcomms 2 -view_mat ")
ADDTEST(mat_tests_9_np3_v4 3 run_mat_tests_9 output/ex9_4_baij.out "-mat_type baij -nsubcomms 2 -view_mat -psubcomm_type interlaced ")
ADDTEST(mat_tests_9_np3_v5 3 run_mat_tests_9 output/ex9_3_sbaij.out "-mat_type sbaij -nsubcomms 2 -view_mat ")
ADDTEST(mat_tests_9_np3_v6 3 run_mat_tests_9 output/ex9_4_sbaij.out "-mat_type sbaij -nsubcomms 2 -view_mat -psubcomm_type interlaced ")
add_executable(run_mat_tests_12 ex12.c)
target_link_libraries(run_mat_tests_12 petsc)
ADDTEST(mat_tests_12_np3_4 3 run_mat_tests_12 output/ex12_4.out "-keep_nonzero_pattern -mat_type mpibaij -mat_block_size 3 ")
add_executable(run_mat_tests_16 ex16.c)
target_link_libraries(run_mat_tests_16 petsc)
ADDTEST(mat_tests_16_np2_1 2 run_mat_tests_16 output/ex16_1.out " ")
add_executable(run_mat_tests_29 ex29.c)
target_link_libraries(run_mat_tests_29 petsc)
ADDTEST(mat_tests_29_np1_1 1 run_mat_tests_29 output/ex29_1.out "")
add_executable(run_mat_tests_30 ex30.c)
target_link_libraries(run_mat_tests_30 petsc)
ADDTEST(mat_tests_30_np1_1 1 run_mat_tests_30 output/ex30_1.out "-mat_ordering -display_matrices -nox ")
ADDTEST(mat_tests_30_np1_2 1 run_mat_tests_30 output/ex30_2.out "-mat_ordering -display_matrices -nox -lu ")
ADDTEST(mat_tests_30_np1_3 1 run_mat_tests_30 output/ex30_3.out "-mat_ordering -lu -triangular_solve ")
ADDTEST(mat_tests_30_np1_4 1 run_mat_tests_30 output/ex30_4.out "")
ADDTEST(mat_tests_30_np1_5 1 run_mat_tests_30 output/ex30_5.out "-lu ")
ADDTEST(mat_tests_30_np1_3_v1 1 run_mat_tests_30 output/ex30_3.out "-lu -triangular_solve ")
add_executable(run_mat_tests_37 ex37.c)
target_link_libraries(run_mat_tests_37 petsc)
ADDTEST(mat_tests_37_np1_1 1 run_mat_tests_37 output/ex37_1.out "")
ADDTEST(mat_tests_37_np3_1 3 run_mat_tests_37 output/ex37_2.out " ")
ADDTEST(mat_tests_37_np1_1_v1 1 run_mat_tests_37 output/ex37_3.out "-mat_type baij -mat_block_size 1 ")
ADDTEST(mat_tests_37_np1_1_v2 1 run_mat_tests_37 output/ex37_4.out "-mat_type baij -mat_block_size 2  ")
ADDTEST(mat_tests_37_np2_1 2 run_mat_tests_37 output/ex37_5.out "-mat_type baij -mat_block_size 1  ")
ADDTEST(mat_tests_37_np2_1_v1 2 run_mat_tests_37 output/ex37_6.out "-mat_type baij -mat_block_size 2  ")
add_executable(run_mat_tests_40 ex40.c)
target_link_libraries(run_mat_tests_40 petsc)
ADDTEST(mat_tests_40_np3_1 3 run_mat_tests_40 output/ex40_1.out "-f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/arco1 -nd 7 -ov 2 ")
add_executable(run_mat_tests_41 ex41.c)
target_link_libraries(run_mat_tests_41 petsc)
ADDTEST(mat_tests_41_np3_1 3 run_mat_tests_41 output/ex41_1.out "-f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/arco1 -nd 3 -ov 1 ")
add_executable(run_mat_tests_42 ex42.c)
target_link_libraries(run_mat_tests_42 petsc)
ADDTEST(mat_tests_42_np3_1 3 run_mat_tests_42 output/ex42_1.out "-f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/arco1    -nd 5 -ov 2  ")
add_executable(run_mat_tests_52 ex52.c)
target_link_libraries(run_mat_tests_52 petsc)
ADDTEST(mat_tests_52_np3_1 3 run_mat_tests_52 output/ex52_1.out "-mat_block_size 2 -test_setvaluesblocked ")
ADDTEST(mat_tests_52_np3_2 3 run_mat_tests_52 output/ex52_2.out "-mat_block_size 2 -test_setvaluesblocked -column_oriented ")
ADDTEST(mat_tests_52_np3_3 3 run_mat_tests_52 output/ex52_3.out "-mat_block_size 1 -test_setvaluesblocked ")
ADDTEST(mat_tests_52_np3_4 3 run_mat_tests_52 output/ex52_4.out "-mat_block_size 1 -test_setvaluesblocked -column_oriented ")
add_executable(run_mat_tests_53 ex53.c)
target_link_libraries(run_mat_tests_53 petsc)
ADDTEST(mat_tests_53_np3_1 3 run_mat_tests_53 FALSE "-matload_block_size 1 -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small ")
ADDTEST(mat_tests_53_np3_1_v1 3 run_mat_tests_53 FALSE "-matload_block_size 2 -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small ")
ADDTEST(mat_tests_53_np4_1 4 run_mat_tests_53 FALSE "-matload_block_size 3 -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small ")
ADDTEST(mat_tests_53_np3_1_v2 3 run_mat_tests_53 FALSE "-matload_block_size 4 -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small ")
ADDTEST(mat_tests_53_np3_1_v3 3 run_mat_tests_53 FALSE "-matload_block_size 5 -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small ")
ADDTEST(mat_tests_53_np3_1_v4 3 run_mat_tests_53 FALSE "-matload_block_size 6 -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small ")
ADDTEST(mat_tests_53_np3_1_v5 3 run_mat_tests_53 FALSE "-matload_block_size 7 -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small ")
ADDTEST(mat_tests_53_np3_1_v6 3 run_mat_tests_53 output/ex53_1.out "-matload_block_size 8 -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small ")
add_executable(run_mat_tests_56 ex56.c)
target_link_libraries(run_mat_tests_56 petsc)
ADDTEST(mat_tests_56_np1_1 1 run_mat_tests_56 output/ex56_1.out "")
ADDTEST(mat_tests_56_np3_4 3 run_mat_tests_56 output/ex56_4.out "-ass_extern ")
ADDTEST(mat_tests_56_np3_5 3 run_mat_tests_56 output/ex56_5.out "-ass_extern -zero_rows")
add_executable(run_mat_tests_59 ex59.c)
target_link_libraries(run_mat_tests_59 petsc)
ADDTEST(mat_tests_59_np1_1 1 run_mat_tests_59 output/ex59_1.out " ")
ADDTEST(mat_tests_59_np3_2 3 run_mat_tests_59 output/ex59_2.out " ")
ADDTEST(mat_tests_59_np1_1_v1 1 run_mat_tests_59 output/ex59_1_baij.out "-mat_type baij ")
ADDTEST(mat_tests_59_np3_2_v1 3 run_mat_tests_59 output/ex59_2_baij.out "-mat_type baij ")
ADDTEST(mat_tests_59_np1_1_v2 1 run_mat_tests_59 output/ex59_1_sbaij.out "-mat_type sbaij ")
ADDTEST(mat_tests_59_np3_2_v2 3 run_mat_tests_59 output/ex59_2_sbaij.out "-mat_type sbaij ")
add_executable(run_mat_tests_61 ex61.c)
target_link_libraries(run_mat_tests_61 petsc)
ADDTEST(mat_tests_61_np1_1 1 run_mat_tests_61 output/ex61_1.out " ")
add_executable(run_mat_tests_68 ex68.c)
target_link_libraries(run_mat_tests_68 petsc)
ADDTEST(mat_tests_68_np1_1 1 run_mat_tests_68 output/ex68_1.out " ")
add_executable(run_mat_tests_76 ex76.c)
target_link_libraries(run_mat_tests_76 petsc)
foreach(bs 2 8)
ADDTEST(mat_tests_76_np1_1_bs-${bs} 1 run_mat_tests_76 FALSE "-bs  ${bs} ")
endforeach()
ADDTEST(mat_tests_76_np1_1_v1 1 run_mat_tests_76 output/ex76_1.out "-testaij ")
add_executable(run_mat_tests_85f ex85f.F)
target_link_libraries(run_mat_tests_85f petsc)
ADDTEST(mat_tests_85f_np1_1 1 run_mat_tests_85f output/ex85f_1.out " ")
add_executable(run_mat_tests_86 ex86.c)
target_link_libraries(run_mat_tests_86 petsc)
ADDTEST(mat_tests_86_np3_1 3 run_mat_tests_86 output/ex86_1.out "")
ADDTEST(mat_tests_86_np3_1_v1 3 run_mat_tests_86 output/ex86_2.out "-mat_type baij ")
ADDTEST(mat_tests_86_np3_1_v2 3 run_mat_tests_86 output/ex86_3.out "-mat_type baij -bs 2 ")
add_executable(run_mat_tests_92 ex92.c)
target_link_libraries(run_mat_tests_92 petsc)
foreach(bs 2 8)
foreach(ov 1 3)
ADDTEST(mat_tests_92_np1_1_bs-${bs}_ov-${ov} 1 run_mat_tests_92 FALSE "-ov ${ov} -mat_block_size ${bs} -test_overlap -test_submat ")
endforeach()
endforeach()
add_executable(run_mat_tests_93 ex93.c)
target_link_libraries(run_mat_tests_93 petsc)
ADDTEST(mat_tests_93_np1_1 1 run_mat_tests_93 output/ex93_1.out "")
ADDTEST(mat_tests_93_np1_1_v1 1 run_mat_tests_93 output/ex93_1.out "-matmatmult_via scalable ")
ADDTEST(mat_tests_93_np1_1_v2 1 run_mat_tests_93 output/ex93_1.out "-matmatmult_via scalable_fast ")
ADDTEST(mat_tests_93_np1_1_v3 1 run_mat_tests_93 output/ex93_1.out "-matmatmult_via heap")
ADDTEST(mat_tests_93_np1_1_v4 1 run_mat_tests_93 output/ex93_1.out "-matmatmult_via btheap")
ADDTEST(mat_tests_93_np1_1_v5 1 run_mat_tests_93 output/ex93_1.out "-matmatmult_via llcondensed ")
ADDTEST(mat_tests_93_np2_1 2 run_mat_tests_93 output/ex93_2.out "-matmatmult_via nonscalable ")
ADDTEST(mat_tests_93_np2_1_v1 2 run_mat_tests_93 output/ex93_2.out " ")
add_executable(run_mat_tests_94 ex94.c)
target_link_libraries(run_mat_tests_94 petsc)
ADDTEST(mat_tests_94_np1_1 1 run_mat_tests_94 output/ex94_1.out "-f0 ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/arco1 -f1 ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/arco1 -viewer_binary_skip_info ")
ADDTEST(mat_tests_94_np1_1_v1 1 run_mat_tests_94 output/ex94_1.out "-f0 ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/arco1 -f1 ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/arco1 -viewer_binary_skip_info ")
ADDTEST(mat_tests_94_np1_1_v2 1 run_mat_tests_94 output/ex94_1.out "-f0 ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/arco1 -f1 ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/arco1 -viewer_binary_skip_info -matptap_via nonscalable ")
ADDTEST(mat_tests_94_np1_1_v3 1 run_mat_tests_94 output/ex94_1.out "-f0 ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/arco1 -f1 ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/arco1 -viewer_binary_skip_info ")
ADDTEST(mat_tests_94_np3_2 3 run_mat_tests_94 output/ex94_1.out "-f0 ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/medium -f1 ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/medium -mattransposematmult_via nonscalable")
ADDTEST(mat_tests_94_np3_2_v1 3 run_mat_tests_94 output/ex94_1.out "-f0 ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/medium -f1 ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/medium -mattransposematmult_via matmatmult")
add_executable(run_mat_tests_95 ex95.c)
target_link_libraries(run_mat_tests_95 petsc)
ADDTEST(mat_tests_95_np3_1 3 run_mat_tests_95 output/ex95_1.out "")
ADDTEST(mat_tests_95_np1_1 1 run_mat_tests_95 output/ex95_2.out "")
add_executable(run_mat_tests_96 ex96.c)
target_link_libraries(run_mat_tests_96 petsc)
ADDTEST(mat_tests_96_np3 3 run_mat_tests_96 output/ex96.out "-Mx 10 -My 5 ")
add_executable(run_mat_tests_97 ex97.c)
target_link_libraries(run_mat_tests_97 petsc)
ADDTEST(mat_tests_97_np3 3 run_mat_tests_97 output/ex97_1.out "")
add_executable(run_mat_tests_98 ex98.c)
target_link_libraries(run_mat_tests_98 petsc)
ADDTEST(mat_tests_98_np4 4 run_mat_tests_98 output/ex98.out " ")
add_executable(run_mat_tests_102 ex102.c)
target_link_libraries(run_mat_tests_102 petsc)
ADDTEST(mat_tests_102_np2 2 run_mat_tests_102 output/ex102_1.out "-view_product ")
add_executable(run_mat_tests_104 ex104.c)
target_link_libraries(run_mat_tests_104 petsc)
ADDTEST(mat_tests_104_np1 1 run_mat_tests_104 output/ex104.out "")
add_executable(run_mat_tests_109 ex109.c)
target_link_libraries(run_mat_tests_109 petsc)
ADDTEST(mat_tests_109_np1 1 run_mat_tests_109 output/ex109.out "")
ADDTEST(mat_tests_109_np1_v1 1 run_mat_tests_109 output/ex109.out "-M 10 -N 10")
ADDTEST(mat_tests_109_np3 3 run_mat_tests_109 output/ex109.out "")
add_executable(run_mat_tests_111 ex111.c)
target_link_libraries(run_mat_tests_111 petsc)
message(STATUS "Skipping tests no longer used: mat_tests_111_np1, mat_tests_111_np4")
#ADDTEST(mat_tests_111_np1 1 run_mat_tests_111 output/ex111.out "-fA ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/matmatmult/K2.gz -fP ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/matmatmult/V2.gz ")
#ADDTEST(mat_tests_111_np4 4 run_mat_tests_111 output/ex111.out "-fA ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/matmatmult/K2.gz -fP ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/matmatmult/V2.gz ")
ADDTEST(mat_tests_111_np4_v1 4 run_mat_tests_111 output/ex111.out "-fA ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/matmatmult/A4.BGriffith -fP ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/matmatmult/P4.BGriffith ")
add_executable(run_mat_tests_114 ex114.c)
target_link_libraries(run_mat_tests_114 petsc)
ADDTEST(mat_tests_114_np1_1 1 run_mat_tests_114 output/ex114.out "")
ADDTEST(mat_tests_114_np2_2 2 run_mat_tests_114 output/ex114_2.out "")
ADDTEST(mat_tests_114_np2_3 2 run_mat_tests_114 output/ex114_3.out "-mat_type baij")
add_executable(run_mat_tests_122 ex122.c)
target_link_libraries(run_mat_tests_122 petsc)
ADDTEST(mat_tests_122_np1 1 run_mat_tests_122 output/ex122.out "")
add_executable(run_mat_tests_125 ex125.c)
target_link_libraries(run_mat_tests_125 petsc)
ADDTEST(mat_tests_125_np1 1 run_mat_tests_125 output/ex125.out "-f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small -mat_solver_package 10 ")
ADDTEST(mat_tests_125_np1_v1 1 run_mat_tests_125 output/ex125_mumps.out "-f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small -mat_solver_package 2 ")
ADDTEST(mat_tests_125_np3 3 run_mat_tests_125 output/ex125_mumps.out "-f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small -mat_solver_package 2 ")
add_executable(run_mat_tests_128 ex128.c)
target_link_libraries(run_mat_tests_128 petsc)
ADDTEST(mat_tests_128_np1 1 run_mat_tests_128 output/ex128.out " ")
ADDTEST(mat_tests_128_np1_v1 1 run_mat_tests_128 output/ex128_2.out "-cholesky -triangular_solve ")
add_executable(run_mat_tests_129 ex129.c)
target_link_libraries(run_mat_tests_129 petsc)
ADDTEST(mat_tests_129_np1 1 run_mat_tests_129 output/ex129.out "-mat_type aij -dof 1 ")
ADDTEST(mat_tests_129_np1_v1 1 run_mat_tests_129 output/ex129.out "-mat_type aij -dof 1 -inplacelu ")
add_executable(run_mat_tests_134 ex134.c)
target_link_libraries(run_mat_tests_134 petsc)
ADDTEST(mat_tests_134_np2_1 2 run_mat_tests_134 output/ex134_1.out "-mat_ignore_lower_triangular ")
add_executable(run_mat_tests_135 ex135.c)
target_link_libraries(run_mat_tests_135 petsc)
ADDTEST(mat_tests_135_np4_1 4 run_mat_tests_135 output/ex135_1.out "-n 1000 -mat_view ascii::ascii_info_detail ")
add_executable(run_mat_tests_136 ex136.c)
target_link_libraries(run_mat_tests_136 petsc)
message(STATUS "Skipping tests using large data file: mat_tests_136_np3_1, mat_tests_136_np5_2, mat_tests_136_np7_3, mat_tests_136_np3_4, mat_tests_136_np5_5, mat_tests_136_np7_6")
#ADDTEST(mat_tests_136_np3_1 3 run_mat_tests_136 output/ex136_1.out "-f  ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/cfd.2.100 -mat_view ascii::ascii_info  ")
#ADDTEST(mat_tests_136_np5_2 5 run_mat_tests_136 output/ex136_2.out "-f  ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/cfd.2.100 -mat_view ascii::ascii_info ")
#ADDTEST(mat_tests_136_np7_3 7 run_mat_tests_136 output/ex136_3.out "-f  ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/cfd.2.100 -mat_view ascii::ascii_info  ")
#ADDTEST(mat_tests_136_np3_4 3 run_mat_tests_136 output/ex136_4.out "-f  ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/cfd.2.100 -mat_view ascii::ascii_info -mat_type baij ")
#ADDTEST(mat_tests_136_np5_5 5 run_mat_tests_136 output/ex136_5.out "-f  ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/cfd.2.100 -mat_view ascii::ascii_info -mat_type baij ")
#ADDTEST(mat_tests_136_np7_6 7 run_mat_tests_136 output/ex136_6.out "-f  ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/cfd.2.100 -mat_view ascii::ascii_info -mat_type baij")
add_executable(run_mat_tests_137 ex137.c)
target_link_libraries(run_mat_tests_137 petsc)
ADDTEST(mat_tests_137_np2_1 2 run_mat_tests_137 output/ex137_1.out " ")
add_executable(run_mat_tests_138 ex138.c)
target_link_libraries(run_mat_tests_138 petsc)
ADDTEST(mat_tests_138_np2 2 run_mat_tests_138 output/ex138.out "-f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small -mat_type aij ")
foreach(nblock 2 3)
ADDTEST(mat_tests_138_np2_v1_nblock-${nblock} 2 run_mat_tests_138 output/ex138.out "-f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small -mat_type baij -matload_block_size ${nblock} ")
endforeach()
add_executable(run_mat_tests_139 ex139.c)
target_link_libraries(run_mat_tests_139 petsc)
foreach(mtype aij baij)
foreach(blocked 0 1)
ADDTEST(mat_tests_139_np2_1_mtype-${mtype}_blocked-${blocked} 2 run_mat_tests_139 output/ex139_1.out "-blocked ${blocked} -mat_type ${mtype} ")
endforeach()
endforeach()
add_executable(run_mat_tests_140 ex140.c)
target_link_libraries(run_mat_tests_140 petsc)
ADDTEST(mat_tests_140_np1_1 1 run_mat_tests_140 output/ex140_1.out "-f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small -aij")
ADDTEST(mat_tests_140_np1_2 1 run_mat_tests_140 output/ex140_1.out " -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small -matload_block_size 2")
ADDTEST(mat_tests_140_np1_3 1 run_mat_tests_140 output/ex140_1.out " -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small -matload_block_size 4 -sbaij")
ADDTEST(mat_tests_140_np3_4 3 run_mat_tests_140 output/ex140_1.out " -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small  -aij")
add_executable(run_mat_tests_141 ex141.c)
target_link_libraries(run_mat_tests_141 petsc)
ADDTEST(mat_tests_141_np1 1 run_mat_tests_141 output/ex141.out " ")
add_executable(run_mat_tests_152 ex152.c)
target_link_libraries(run_mat_tests_152 petsc)
ADDTEST(mat_tests_152_np2_1 2 run_mat_tests_152 output/ex152_1.out "-prefix ${PETSc_SOURCE_DIR}/share/petsc/datafiles/parmetis-test/testnp2 ")
ADDTEST(mat_tests_152_np4_2 4 run_mat_tests_152 output/ex152_2.out "-prefix ${PETSc_SOURCE_DIR}/share/petsc/datafiles/parmetis-test/testnp4 ")
add_executable(run_mat_tests_159 ex159.c)
target_link_libraries(run_mat_tests_159 petsc)
ADDTEST(mat_tests_159_np3_1 3 run_mat_tests_159 output/ex159_1.out "")
ADDTEST(mat_tests_159_np3_nest 3 run_mat_tests_159 output/ex159_nest.out "-nest ")
add_executable(run_mat_tests_160 ex160.c)
target_link_libraries(run_mat_tests_160 petsc)
ADDTEST(mat_tests_160_np1 1 run_mat_tests_160 output/ex160.out " ")
add_executable(run_mat_tests_161 ex161.c)
target_link_libraries(run_mat_tests_161 petsc)
ADDTEST(mat_tests_161_np1 1 run_mat_tests_161 output/ex161.out " ")
ADDTEST(mat_tests_161_np1_v1 1 run_mat_tests_161 output/ex161.out "-matmattransmult_color -mat_no_inode ")
ADDTEST(mat_tests_161_np1_v2 1 run_mat_tests_161 output/ex161.out "-matmattransmult_color -mat_no_inode -matden2sp_brows 3 ")
ADDTEST(mat_tests_161_np1_v3 1 run_mat_tests_161 output/ex161.out "-matmattransmult_color -mat_no_inode -A_matrart_via matmattransposemult ")
ADDTEST(mat_tests_161_np1_v4 1 run_mat_tests_161 output/ex161.out "-matmattransmult_color -mat_no_inode -A_matrart_via coloring_rart ")
add_executable(run_mat_tests_163 ex163.c)
target_link_libraries(run_mat_tests_163 petsc)
ADDTEST(mat_tests_163_np1 1 run_mat_tests_163 output/ex163.out "-f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small ")
ADDTEST(mat_tests_163_np3 3 run_mat_tests_163 output/ex163.out "-f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small ")
add_executable(run_mat_tests_164 ex164.c)
target_link_libraries(run_mat_tests_164 petsc)
ADDTEST(mat_tests_164_np1 1 run_mat_tests_164 output/ex164_1.out " ")
add_executable(run_mat_tests_169 ex169.c)
target_link_libraries(run_mat_tests_169 petsc)
ADDTEST(mat_tests_169_np4 4 run_mat_tests_169 output/ex169_1.out "  -f0 ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/ns-real-int32-float64 -malloc_dump ")
add_executable(run_mat_tests_171 ex171.c)
target_link_libraries(run_mat_tests_171 petsc)
ADDTEST(mat_tests_171_np4 4 run_mat_tests_171 output/ex171_1.out "  -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/ns-real-int32-float64 -malloc_dump ")
add_executable(run_mat_tests_180 ex180.c)
target_link_libraries(run_mat_tests_180 petsc)
ADDTEST(mat_tests_180_np1 1 run_mat_tests_180 FALSE "-mat_type aij  -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/ns-real-int32-float64 -malloc_dump ")
ADDTEST(mat_tests_180_np2 2 run_mat_tests_180 FALSE "-mat_type aij  -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/ns-real-int32-float64 -malloc_dump ")
ADDTEST(mat_tests_180_np1_v1 1 run_mat_tests_180 FALSE "-mat_type baij  -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/ns-real-int32-float64 -malloc_dump ")
ADDTEST(mat_tests_180_np2_v1 2 run_mat_tests_180 FALSE "-mat_type baij  -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/ns-real-int32-float64 -malloc_dump ")
ADDTEST(mat_tests_180_np1_v2 1 run_mat_tests_180 FALSE "-mat_type sbaij  -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/ns-real-int32-float64 -malloc_dump ")
ADDTEST(mat_tests_180_np2_v2 2 run_mat_tests_180 FALSE "-mat_type sbaij  -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/ns-real-int32-float64 -malloc_dump ")
ADDTEST(mat_tests_180_np1_v3 1 run_mat_tests_180 output/ex180_1.out "-mat_type sbaij -matload_block_size 4 -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/ns-real-int32-float64 -malloc_dump ")
add_executable(run_mat_tests_183 ex183.c)
target_link_libraries(run_mat_tests_183 petsc)
ADDTEST(mat_tests_183_np2 2 run_mat_tests_183 output/ex183_2_1.out " -total_subdomains 1 ")
ADDTEST(mat_tests_183_np3 3 run_mat_tests_183 output/ex183_3_2.out " -total_subdomains 2 ")
ADDTEST(mat_tests_183_np4 4 run_mat_tests_183 output/ex183_4_2.out " -total_subdomains 2 ")
ADDTEST(mat_tests_183_np6 6 run_mat_tests_183 output/ex183_6_2.out " -total_subdomains 2 ")
add_executable(run_mat_tests_172 ex172.c)
target_link_libraries(run_mat_tests_172 petsc)
ADDTEST(mat_tests_172_np4 4 run_mat_tests_172 output/ex172.out "")
ADDTEST(mat_tests_172_np4_v1 4 run_mat_tests_172 output/ex172.out "-different ")
ADDTEST(mat_tests_172_np4_v2 4 run_mat_tests_172 output/ex172.out "-skip ")
ADDTEST(mat_tests_172_np4_v3 4 run_mat_tests_172 output/ex172.out "-different -skip ")
ADDTEST(mat_tests_172_np1 1 run_mat_tests_172 output/ex172.out "-mat_type baij")
ADDTEST(mat_tests_172_np4_v4 4 run_mat_tests_172 output/ex172.out "-mat_type baij")
ADDTEST(mat_tests_172_np1_v1 1 run_mat_tests_172 output/ex172.out "-mat_type sbaij")
ADDTEST(mat_tests_172_np4_v5 4 run_mat_tests_172 output/ex172.out "-mat_type sbaij")
add_executable(run_mat_tests_181 ex181.c)
target_link_libraries(run_mat_tests_181 petsc)
ADDTEST(mat_tests_181_np2 2 run_mat_tests_181 output/ex181.out "")
ADDTEST(mat_tests_181_np3 3 run_mat_tests_181 output/ex181_2.out "-detect_bug ")
add_executable(run_mat_tests_182 ex182.c)
target_link_libraries(run_mat_tests_182 petsc)
ADDTEST(mat_tests_182_np1 1 run_mat_tests_182 output/ex182_1.out "-info | grep malloc ")
ADDTEST(mat_tests_182_np2 2 run_mat_tests_182 output/ex182_2.out "-info | grep malloc ")
ADDTEST(mat_tests_182_np1_v1 1 run_mat_tests_182 output/ex182_3.out "-info -mat_type baij | grep malloc ")
ADDTEST(mat_tests_182_np2_v1 2 run_mat_tests_182 output/ex182_4.out "-info -mat_type baij | grep malloc ")
ADDTEST(mat_tests_182_np1_v2 1 run_mat_tests_182 output/ex182_5.out "-info -mat_type sbaij | grep malloc ")
ADDTEST(mat_tests_182_np2_v2 2 run_mat_tests_182 output/ex182_6.out "-info -mat_type sbaij | grep malloc ")
add_executable(run_mat_tests_190 ex190.c)
target_link_libraries(run_mat_tests_190 petsc)
ADDTEST(mat_tests_190_np2 2 run_mat_tests_190 FALSE "-mat_type aij -mat_view -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/ns-real-int32-float64  ")
ADDTEST(mat_tests_190_np2_v1 2 run_mat_tests_190 FALSE "-mat_type baij -mat_view -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/ns-real-int32-float64  ")
ADDTEST(mat_tests_190_np2_v2 2 run_mat_tests_190 FALSE "-mat_type sbaij -mat_view -f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/ns-real-int32-float64  ")
add_executable(run_mat_tests_191 ex191.c)
target_link_libraries(run_mat_tests_191 petsc)
ADDTEST(mat_tests_191_np2 2 run_mat_tests_191 output/ex191_1.out "  ")
