add_executable(run_mat_tutorials_10 ex10.c)
target_link_libraries(run_mat_tutorials_10 petsc)
ADDTEST(mat_tutorials_10_np1_seqaij 1 run_mat_tutorials_10 output/ex10_seqaij.out "-f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small -a_mat_type seqaij  ")
ADDTEST(mat_tutorials_10_np1_seqdense 1 run_mat_tutorials_10 output/ex10_seqdense.out "-f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small -a_mat_type seqdense ")
ADDTEST(mat_tutorials_10_np2_mpiaij 2 run_mat_tutorials_10 output/ex10_mpiaij.out "-f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small -a_mat_type mpiaij ")
ADDTEST(mat_tutorials_10_np2_mpidense 2 run_mat_tutorials_10 output/ex10_mpidense.out "-f ${PETSc_SOURCE_DIR}/share/petsc/datafiles/matrices/small -a_mat_type mpidense ")
add_executable(run_mat_tutorials_15 ex15.c)
target_link_libraries(run_mat_tutorials_15 petsc)
ADDTEST(mat_tutorials_15_np3_2 3 run_mat_tutorials_15 output/ex15_2.out "-mat_partitioning_type ptscotch ")
